# VCPU32-FPGA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.sv_cache/files/: CMakeLists.txt  Module1_TB.v  settings.json  vcpu32.v
Notes/: VCPU32-PipeLine-Blockdiagram.key  VCPU32-Pipeline-Notes.numbers  pieces
VCPU32-Verilog-Old-Phase-Out/doc/: README.md
VCPU32-Verilog-Old-Phase-Out/hdl/: README.md  VCPU32.v
VCPU32-Verilog-Old-Phase-Out/scripts/: Makefile  make_all.sh
VCPU32-Verilog-Old-Phase-Out/simulation/: AdderUnit_TB.vvp  Adder_CLA_32bit_TB.vvp  Adder_CLA_4bit_TB.vcd  Adder_CLA_4bit_TB.vvp  AluUnit_TB.vvp  AndOp_TB.vvp  DoubleShiftRight_64bit_TB.vvp  Encoder_16_4_TB.vvp  ImmGenUnit_TB.vvp  IncrementerUnit_TB.vvp  Mux_2_1_TB.vvp  Mux_4_1_TB.vvp  Mux_8_1_TB.vcd  Mux_8_1_TB.vvp  OrOp_TB.vvp  ScanRegFileUnit_TB.vcd  ScanRegFileUnit_TB.vvp  ScanRegUnit_TB.vvp  ShiftMergeDecode_TB.vvp  ShiftMergeMask_32bit_TB.vvp  SignExtend_32bit_TB.vvp  TestCondUnit_TB.vvp  VCPU32_TB.vvp  XorOp_TB.vvp
VCPU32-Verilog-Old-Phase-Out/synthesis/: README.md
VCPU32-Verilog-Old-Phase-Out/test-benches/: AdderUnit_TB.v  Adder_CLA_32bit_TB.v  Adder_CLA_4bit_TB.v  AluUnit_TB.v  AndOp_TB.v  DoubleShiftRight_64bit_TB.v  Encoder_16_4_TB.v  ImmGenUnit_TB.v  OrOp_TB.v  (+12 more)
synthesis/: README.md
vcpu32/: CMakeLists.txt  aluUnit.v  cacheUnit.v  cpuCore.v  defines.vh  executeStage.v  fetchDecodeStage.v  instrAdrStage.v  macros.vh  memoryAccessStage.v  operandFetchStage.v  parameters.vh  portMaps.vh  register.v  registerFile.v  registerUnit.v  shiftMergeUnit.v  tbHelpers.vh  tlbUnit.v  util.v  vcpu32.v
(+8 files in other folders)
